--- a/expendly/pubspec.yaml
+++ b/expendly/pubspec.yaml
@@ -43,7 +43,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-      - imagenes/login.png
+      - imagenes/fondo.png
       - imagenes/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
