--- a/expendly/pubspec.yaml
+++ b/expendly/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   assets:
       - imagenes/fondo.png
       - imagenes/logo.png
+      - imagenes/usuario_default.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
