--- a/expendly/android/app/build.gradle
+++ b/expendly/android/app/build.gradle
@@ -64,4 +64,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //Dependencia para Google Services (FireBase)
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
+
+//Dependencia para Google Services (FireBase)
+apply plugin: 'com.google.gms.google-services'
