--- a/expendly/pubspec.yaml
+++ b/expendly/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
     sdk: flutter
   firebase_auth: 0.6.6
   cloud_firestore: ^0.8.2+3
+  sqflite: any
+  path_provider: ^0.4.1
+  intl: ^0.15.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
