--- a/expendly/pubspec.yaml
+++ b/expendly/pubspec.yaml
@@ -15,7 +15,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: 0.6.6
+  carousel_slider: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +44,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
+      - imagenes/banda.png
       - imagenes/fondo.png
       - imagenes/fondo_drawer_header.png
       - imagenes/fondo_drawer_listtile.png
