--- a/expendly/pubspec.yaml
+++ b/expendly/pubspec.yaml
@@ -16,12 +16,11 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^0.0.6
+  http: ^0.12.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-  #Autentificación con FireBase:
 
 dev_dependencies:
   flutter_test:
